gcc/testsuite/rust/rustc/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-latebound-regions.rs
fn foo<'a,'b>(x: &mut Vec<&'a u8>, y: &'b u8) {
    x.push(y);
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() { }

